--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "serve": "vue-cli-service serve",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -20,6 +21,8 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "@vue/cli-service": "~4.5.0",
     "vite": "^5.2.0"
+
   }
 }
